# jdx

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.tape
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml  release.yml
fixtures/: large_array.json  malformed.json  nested.json  sample.csv  sample.toml  sample.yaml  unicode_keys.json
src/: app.rs  clipboard.rs  config.rs  history.rs  init.rs  keys.rs  lib.rs  main.rs  mcp.rs  modes.rs
src/ai/: mod.rs  ollama.rs  openai.rs  prompts.rs  service.rs
src/app/: ai_handler.rs  mod.rs  query_handler.rs  render.rs  schema_handler.rs  state.rs  tree_handler.rs
src/engine/: json.rs  mod.rs  query.rs  schema.rs  suggestion.rs  transform.rs
src/format/: csv_format.rs  json_fmt.rs  mod.rs  toml_format.rs  yaml_format.rs
src/widgets/: ai_panel.rs  candidate_popup.rs  help_overlay.rs  json_view.rs  mod.rs  query_input.rs  status_bar.rs  tree_view.rs
tests/: ai_tests.rs  format_tests.rs  integration_tests.rs  key_tests.rs  query_tests.rs  schema_tests.rs  suggestion_tests.rs  transform_tests.rs  tui_snapshot_tests.rs
website/: index.html  script.js  styles.css  vercel.json
website/.vercel/: project.json
